dont fix bg image on small or med screens

--- a/scss/sections.scss
+++ b/scss/sections.scss
@@ -55,7 +55,7 @@ section {
         @media (min-width: 768px) {
             min-height: 650px;
 
-            background-attachment: fixed;
+            background-attachment: scroll;
             clip-path: polygon(0 $page_diagonal, 100% 0%, 100% #{100% - $page_diagonal}, 0% 100%);
 
 
@@ -84,7 +84,13 @@ section {
                 }
             }
 
-        }
+        } // end of 768
+
+            @media (min-width: 992px) {
+background-attachment: fixed;
+            }
+
+
 
     }
 
